
    * New smart method, ``Repository.stream_revisions_chunked``, for fetching
      revision data that streams revision data via a chunked encoding.  This
      avoids buffering large amounts of revision data on the server and on the
      client, and sends less data to the server to request the revisions.
      (Andrew Bennetts, Robert Collins, #178353)

  IMPROVEMENTS:

    * Fetching between different repository formats with compatible models now
      takes advantage of the smart method to stream revisions.  (Andrew Bennetts)

    * The ``--coverage`` option is now global, rather specific to ``bzr
      selftest``.  (Andrew Bennetts)

    * The ``register-branch`` command will now use the public url of the branch
      containing the current directory, if one has been set and no explicit
      branch is provided.  (Robert Collins)

    * Tweak the ``reannotate`` code path to optimize the 2-parent case.
      Speeds up ``bzr annotate`` with a pack repository by approx 3:2.
      (John Arbash Meinel)

  BUGFIXES:

    * Calculate remote path relative to the shared medium in _SmartClient.  This
      is related to the problem in bug #124089.  (Andrew Bennetts)

    * Cleanly handle connection errors in smart protocol version two, the same
      way as they are handled by version one.  (Andrew Bennetts)
      
    * List possible values for BZR_SSH environment variable in env-variables
      help topic. (Alexander Belchenko, #181842)

    * pull --quiet is now more quiet, in particular a message is no longer
      printed when the remembered pull location is used. (James Westby,
      #185907)

    * ``reconfigure`` can safely be interrupted while fetching.
      (Aaron Bentley, #179316)

    * ``reconfigure`` preserves tags when converting to and from lightweight
      checkouts.  (Aaron Bentley, #182040)

    * Stop polluting /tmp when running selftest.
      (Vincent Ladeuil, #123623)

    * Switch from NFKC => NFC for normalization checks. NFC allows a few